--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -6,7 +6,7 @@
     "uploadText": "点击或拖拽图片到此区域",
     "uploadHint": "支持 JPG、PNG 等常见图片格式，建议使用正方形图片以获得最佳效果。所有处理都在您的浏览器中完成。",
     "previewTitle": "九宫格预览",
-    "processing": "正在生成九宫格...",
+    "processing": "正在处理图片...",
     "download": "下载图片",
     "noImage": "请上传图片以查看预览",
     "uploadSuccess": "九宫格生成成功！",
@@ -16,6 +16,13 @@
     "characters": "个角色",
     "characterDescription": "这些美丽的东方花硬种角色将与您的图片一起组成九宫格",
     "uploadStarted": "开始上传和处理图片...",
+    "statusReady": "准备就绪",
+    "statusLoadingUserImage": "加载用户图片...",
+    "statusLoadingCharacters": "加载东方角色...",
+    "statusGeneratingGrid": "组合九宫格...",
+    "statusDrawing": "绘制图像...",
+    "statusFinalizing": "完成最后处理...",
+    "statusCompleted": "生成完成！",
     "generating": "正在生成九宫格，请稍候...",
     "fileTooLarge": "文件太大！请选择小于 10MB 的图片。",
     "formatWarning": "建议使用 JPG 或 PNG 格式以获得最佳效果。",
