Feature: Add acknowledgments section to homepage

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -41,5 +41,11 @@
     "footer": {
         "developedBy": "異月（99%）とAI（1%）の共同開発",
         "contact": "連絡先：QQ 3526869976"
+    },
+    "acknowledgments": {
+        "title": "感謝",
+        "characters": "美しい東方花硬種のキャラクターたちに感謝します。この九宮格ジェネレーターを特別なものにしてくれました！",
+        "flandre": "Flandre Scarletの不思議なインスピレーションに感謝！",
+        "teacher": "美しいテストサンプルを提供してくださった白菜先生に感謝します。先生の博麗霊夢のコスプレはとても可愛いです！"
     }
 }
